# spox

./: README.md  pyproject.toml  spox.py
config/: defaults.yaml
config/materials/: glass.json
config/palettes/: classic.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  USER_GUIDE.md
src/spox/: __init__.py  __main__.py
src/spox/camera/: __init__.py  models.py
src/spox/core/: __init__.py  rendering.py
src/spox/data/: __init__.py  registry.py
src/spox/gui/: __init__.py
src/spox/session/: __init__.py
src/spox/styles/: __init__.py
src/spox/utils/: __init__.py
tests/: test_styles.py
